crates/test-files/fixtures/compile_errors/self_not_first.fe
contract Foo {
    pub fn bar(my_num: u8, self) {}
}
